# WebinarVideoCleaner

./: .gitignore  .pre-commit-config.yaml  README.md  apply_cuts_to_srt.py  audio_cleaner.py  check_srt_alignment.py  common_utils.py  correct_srt.py  correct_srt_errors.py  correct_transcription.py  cut_mp4.py  delivery_metrics.py  generate_chapters.py  main_video_editor.py  pyproject.toml  test_ffprobe.py  tests.sh  transcribe_to_srt.py
tests/: test_apply_cuts_to_srt.py  test_check_srt_alignment.py  test_common_utils.py  test_correct_srt.py  test_cut_mp4.py  test_delivery_metrics.py  test_gemini_scripts.py  test_main_video_editor.py  test_transcribe_extraction_logic.py  test_transcribe_to_srt_interactive.py  test_transcribe_utils.py
