[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webinar-video-cleaner"
version = "0.1.0"
description = "Automated video editing workflow using Whisper and Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Artem Reva" }
]
dependencies = [
    "google-genai", # audio_cleaner.py, generate_chapters.py
    "moviepy>=2.0.0.dev0", # cut_mp4.py
    "openai-whisper>=20250625", # transcribe_to_srt.py
    "python-dotenv", # audio_cleaner.py, generate_chapters.py
]

[tool.setuptools]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pre-commit",
]
